@startuml Co2 Monitor Class Diagram
class "main.c" as MainC {

}

class app_main {

}

class NonBlockingTimer {

}

namespace App {
    class DisplayHandler {
        - DisplayScreenBase* currentScreen
        + void setScreen(DisplayScreenBase* newScreen)
        + void update()
    }
    class TouchHandler {
        + void init()
        + static void lvglTouchPad_cb(lv_indev_t*, lv_indev_data_t*)
    }
    class SensorHandler {

    }
}

namespace UI {

    Interface DisplayScreenBase <<interface>>{
        + {abstract} void init()
        + {abstract} void update()
        + {abstract} void destroy()
    }
    
    class Bootscreen {

    }
    class Homescreen {

    }
    class SettingsScreen {

    }
}

namespace Settings {
    class DisplaySettings {

    }

    class SensorSettings {

    }
}

namespace Drivers {

    interface DisplayDriverBase <<interface>>{
        + {abstract} void lvglDisplayInit()
    }

    interface TouchDriverBase <<interface>>{

    }

    interface SensorDriverBase <<interface>>{
        + {abstract} void init()
        + {abstract} void read()
        + {abstract} const osMessageQueueId_t getQueueHandle()
    }

    namespace SPI {
        class ST7796 {

        }
    }
    namespace I2C {
        class I2CDevice {
            # I2CHandleTypeDef* I2C
            + I2CDevice(I2C_HandleTypeDef* handle, uint8_t)
        }


        class FT6336U {

        }

        class SCD40 {

        }
    }
}

'Relations
MainC --> app_main
app_main --> DisplayHandler
app_main --> TouchHandler
app_main --> SensorHandler

DisplayHandler --> TouchHandler
DisplayHandler --> NonBlockingTimer
Bootscreen --> NonBlockingTimer
DisplayHandler --> DisplayDriverBase
DisplayHandler o-- DisplayScreenBase
DisplayScreenBase <|-- Homescreen
DisplayScreenBase <|-- SettingsScreen
DisplayScreenBase <|-- Bootscreen
TouchHandler --> TouchDriverBase
SensorHandler --> SensorDriverBase

DisplaySettings <-- SettingsScreen
DisplaySettings <-- DisplayHandler

I2CDevice <|-- FT6336U
I2CDevice <|-- SCD40

DisplayDriverBase <|.. ST7796
TouchDriverBase <|.. FT6336U
SensorDriverBase <|.. SCD40
@enduml